third_party/move/move-compiler/tests/move_check/inlining/acquires_error_msg_inline.exp
error[E04020]: missing acquires annotation
   ┌─ tests/move_check/inlining/acquires_error_msg_inline.move:11:9
   │
11 │         borrow_global_mut<Test>(@0xcafe).value = 2;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The call acquires '0x42::test::Test', but the 'acquires' list for the current function 'call_modify_without_acquire` does not contain this type. It must be present in the calling context's acquires list

